<resources>
    <string name="app_name">Password Manager</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="welcome_to_password_manager">Welcome to Password Manager</string>
    <string name="hey_user">Hey User ! 👋</string>
    <string name="description"><![CDATA[I\'m your friend which helps you to remember your passwords with Encryption & Safety.]]></string>
    <string name="instruction">Before start saving your passwords please enter some basic details.</string>
    <string name="regular_passcode">Regular Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="passcode_forgot_warning">If you forget your passcode, all the data will be lost.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="content_description_add_password">Add password button</string>
    <string name="settings">Settings</string>
    <string name="passcode">Passcode</string>
    <string name="change_regular_passcode">Change regular passcode</string>
    <string name="features">Features</string>
    <string name="duress_passcode">Duress passcode</string>
    <string name="about">About</string>
    <string name="person">Person</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Priyansh Sethia</string>
    <string name="bug">Bug</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="report_bug_description">Report a bug or request a feature on mail.</string>
    <string name="build">Build</string>
    <string name="version">v1.0.0</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="toast_message">Show custom message here !</string>
    <string name="notes">Notes</string>
    <string name="add_password">Add Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="edit_password">Edit Password</string>
    <string name="reset_all">Reset All</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="current_passcode">Current Passcode</string>
    <string name="new_passcode">New Passcode</string>
    <string name="developer_info">Developer Info</string>
    <string name="android">Android</string>
</resources>